--- a/code-gen-web/package.json
+++ b/code-gen-web/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-singlefile": "0.10.0-beta"
   },
   "devDependencies": {
     "@types/react": "^18.0.12",
