웹 페이지 제공

--- a/CodeGen/CodeGen/CodeGen.csproj
+++ b/CodeGen/CodeGen/CodeGen.csproj
@@ -7,4 +7,9 @@
         <OutputType>Library</OutputType>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="Web\index.html" />
+      <EmbeddedResource Include="Web\index.html" />
+    </ItemGroup>
+
 </Project>
