기본 기능 완료

--- a/CodeGen/CodeGen.Example/Properties/launchSettings.json
+++ b/CodeGen/CodeGen.Example/Properties/launchSettings.json
@@ -4,9 +4,8 @@
     "CodeGen.Example": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "code-gen",
-      "applicationUrl": "http://localhost:5068",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
