--- a/CodeGen/CodeGen.Example/CodeGen.Example.csproj
+++ b/CodeGen/CodeGen.Example/CodeGen.Example.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NodaTime" Version="3.1.0" />
+        <PackageReference Include="NodaTime.Serialization.SystemTextJson" Version="1.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
