--- a/CodeGen/CodeGen/CodeGen.csproj
+++ b/CodeGen/CodeGen/CodeGen.csproj
@@ -9,7 +9,12 @@
 
     <ItemGroup>
       <None Remove="Web\index.html" />
+      <EmbeddedResource Include="Generation\preamble.ts" />
       <EmbeddedResource Include="Web\index.html" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="NodaTime" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
