--- a/code-gen-web/package.json
+++ b/code-gen-web/package.json
@@ -8,8 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
+    "mobx": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^1.3.0",
     "vite-plugin-singlefile": "0.10.0-beta"
   },
   "devDependencies": {
