--- a/CodeGen/CodeGen/CodeGen.csproj
+++ b/CodeGen/CodeGen/CodeGen.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <None Remove="Web\index.html" />
       <EmbeddedResource Include="Generation\preamble.ts" />
+      <EmbeddedResource Include="Generation\preamble-swr.ts" />
       <EmbeddedResource Include="Web\index.html" />
     </ItemGroup>
 
