--- a/code-gen-web/package.json
+++ b/code-gen-web/package.json
@@ -10,17 +10,17 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
-    "mobx": "^6.6.0",
+    "mobx": "^6.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0",
-    "vite-plugin-singlefile": "0.10.0-beta"
+    "vite-plugin-singlefile": "0.10.0-beta.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.12",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.12"
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13"
   }
 }
