--- a/code-gen-web/package.json
+++ b/code-gen-web/package.json
@@ -9,18 +9,18 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.4",
     "mobx": "^6.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0",
-    "vite-plugin-singlefile": "0.10.0-beta.2"
+    "vite-plugin-singlefile": "0.11.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@vitejs/plugin-react": "^1.3.2",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "vite": "^3.0.2"
   }
 }
