분리 기능 구현 준비

--- a/CodeGen/CodeGen/CodeGen.csproj
+++ b/CodeGen/CodeGen/CodeGen.csproj
@@ -12,6 +12,7 @@
       <EmbeddedResource Include="Generation\preamble.ts" />
       <EmbeddedResource Include="Generation\preamble-swr.ts" />
       <EmbeddedResource Include="Web\index.html" />
+      <EmbeddedResource Include="Generation\header.ts" />
     </ItemGroup>
 
     <ItemGroup>
