--- a/code-gen-cli/package.json
+++ b/code-gen-cli/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-json": "^5.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-typescript": "^9.0.1",
-    "@types/node": "^18.11.2",
-    "axios": "^1.1.3",
-    "rollup": "^2.79.1",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/node": "^18.13.0",
+    "axios": "^1.3.3",
+    "rollup": "^3.15.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
-  }
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
+  },
+  "type": "module"
 }
