--- a/code-gen-cli/package.json
+++ b/code-gen-cli/package.json
@@ -13,11 +13,11 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.11.19",
     "axios": "^1.6.7",
     "rollup": "^4.12.0",
-    "rollup-plugin-uglify": "^6.0.4",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
