--- a/code-gen-cli/package.json
+++ b/code-gen-cli/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.12.4",
-    "axios": "^1.6.8",
-    "rollup": "^4.14.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.4.4"
+    "@types/node": "^22.5.5",
+    "axios": "^1.7.7",
+    "rollup": "^4.21.3",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
