--- a/CodeGen/CodeGen/CodeGen.csproj
+++ b/CodeGen/CodeGen/CodeGen.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <None Remove="Web\index.html" />
+      <EmbeddedResource Include="Generation\header-swr.ts" />
       <EmbeddedResource Include="Generation\util.ts" />
       <EmbeddedResource Include="Generation\util-swr.ts" />
       <EmbeddedResource Include="Web\index.html" />
@@ -16,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="NodaTime" Version="3.1.11" />
+      <PackageReference Include="NodaTime" Version="3.1.12" />
     </ItemGroup>
 
     <ItemGroup>
